--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.datasource.password=gdgproject
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=25MB
